Fixes the join renew text appearing on small mobile sizes

--- a/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
@@ -45,11 +45,15 @@
   }
 
   &__join--links {
-    @include gutter($margin-left-full...);
-    @include gutter($margin-right-full...);
-    display: flex;
-    line-height: 1em;
-    width: 65px;
+    display: none;
+
+    @include breakpoint($bp-small min-width) {
+      @include gutter($margin-left-full...);
+      @include gutter($margin-right-full...);
+      display: flex;
+      line-height: 1em;
+      width: 65px;
+    }
 
     @include breakpoint($bp-large min-width) {
       display: none;
